--- a/server/package.json
+++ b/server/package.json
@@ -6,13 +6,17 @@
   "dependencies": {
     "pg": "~2.11.1",
     "pogo": "~0.6.8",
-    "express": "~3.5.1"
+    "express": "~3.5.1",
+    "mime": "~1.2.11",
+    "mkdirp": "~0.3.5"
   },
   "devDependencies": {
     "db-migrate": "~0.6.4",
     "mocha": "~1.18.2",
-    "needle": "~0.6.6",
-    "chai": "~1.9.1"
+    "needle": "git+https://github.com/featurist/needle.git",
+    "chai": "~1.9.1",
+    "fcmp": "~0.1.1",
+    "memorystream": "~0.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
